--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
