--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "socket.io-client": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "~7.9.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.26.0",
+    "eslint-plugin-react-native": "^3.11.0"
   },
   "private": true
 }
