--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "tk-lajkovac-rn",
+    "name": "TK Lajkovac",
     "slug": "tk-lajkovac-rn",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -13,13 +13,15 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.tklajkovac.app",
+      "buildNumber": "1.0.0"
     },
     "android": {
+      "package": "com.tklajkovac.app",
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
